--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ assets/images/base/_notes/dwsync.xml
 assets/images/home/_notes/dwsync.xml
 pages/base/_notes/dwsync.xml
 pages/_notes/dwsync.xml
+assets/css/_notes/dwsync.xml
+*.xml
+*.xml
+*.xml
+TeamSearch.iml
